@@ -137,7 +137,7 @@ BUILT_SOURCES = gmp.h
 DISTCLEANFILES = $(BUILT_SOURCES) config.m4 @gmp_srclinks@
 
 # Tell gmp.h it's building gmp, not an application, used by windows DLL stuff.
-INCLUDES=-D__GMP_WITHIN_GMP
+AM_CPPFLAGS=-D__GMP_WITHIN_GMP
 
 
 MPF_OBJECTS = mpf/init$U.lo mpf/init2$U.lo mpf/inits$U.lo mpf/set$U.lo	    \
